# hifi.rs

./: .env  .env.sample  .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.arm64  Makefile.toml  README.md  build_arm64.sh  build_linux.sh  db_design.sqbpro  flake.nix  justfile  makefile  sqlx-data.json
.github/: dependabot.yml
.github/workflows/: cargo-make.yml  pull-request-linux.yml  pull-request-macos.yml  pull-request.yml  release-linux.yml  release-macos.yml  release.yml
git-hooks/: commit-msg
hifirs/: Cargo.toml  Makfile.toml  build.rs  db_design.sqbpro  sqlx-data.json
hifirs/migrations/: 20221110040355_initial_schema.down.sql  20221110040355_initial_schema.up.sql  20230203161531_player_state.down.sql  20230203161531_player_state.up.sql  20230203185733_playback_entity.down.sql  20230203185733_playback_entity.up.sql  20230203190549_remove_state_table.down.sql  20230203190549_remove_state_table.up.sql  20230203190647_remove_player_queue.down.sql  20230203190647_remove_player_queue.up.sql
hifirs/src/: cli.rs  lib.rs  main.rs  mpris.rs  player.rs  service.rs  websocket.rs
hifirs/src/cursive/: mod.rs
hifirs/src/player/: actions.rs  controls.rs  error.rs  mod.rs  notification.rs
hifirs/src/player/queue/: controls.rs  mod.rs
hifirs/src/qobuz/: album.rs  artist.rs  mod.rs  playlist.rs  search_results.rs  track.rs
hifirs/src/sql/: db.rs  mod.rs
hifirs/src/state/: app.rs  mod.rs
hifirs/src/ui/: mod.rs  nowplaying.rs  playlists.rs  search.rs
hifirs/src/ui/components/: mod.rs  player.rs
playlist-sync/: Cargo.toml
playlist-sync/src/: cli.rs  lib.rs  main.rs  qobuz.rs  spotify.rs
qobuz-api/: Cargo.toml  Makefile.toml
qobuz-api/src/: lib.rs
qobuz-api/src/client/: album.rs  api.rs  artist.rs  mod.rs  playlist.rs  search_results.rs  track.rs
qobuz-api/src/client/snapshots/: qobuz_client__client__api__can_use_methods-2.snap  qobuz_client__client__api__can_use_methods-3.snap  qobuz_client__client__api__can_use_methods-4.snap  qobuz_client__client__api__can_use_methods-7.snap  qobuz_client__client__api__can_use_methods.snap
qobuz-client/: Cargo.toml
qobuz-client/src/: lib.rs
qobuz-client/src/client/: album.rs  api.rs  artist.rs  mod.rs  playlist.rs  search_results.rs  track.rs
qobuz-client/src/client/snapshots/: qobuz_client__client__api__can_use_methods-2.snap  qobuz_client__client__api__can_use_methods-3.snap  qobuz_client__client__api__can_use_methods-4.snap  qobuz_client__client__api__can_use_methods-5.snap  qobuz_client__client__api__can_use_methods-6.snap  qobuz_client__client__api__can_use_methods-7.snap  qobuz_client__client__api__can_use_methods.snap  qobuz_client__client__api__can_use_methods.snap.new
src/: cli.rs  lib.rs  main.rs  mpris.rs  player.rs
src/qobuz/: album.rs  artist.rs  client.rs  mod.rs  playlist.rs  search_results.rs  track.rs
src/state/: app.rs  mod.rs
src/ui/: mod.rs  nowplaying.rs  playlists.rs  search.rs
src/ui/components/: mod.rs  player.rs
src/ui/terminal/: mod.rs  nowplaying.rs  player.rs  search.rs
src/ui/terminal/components/: mod.rs
tests/: client_test.rs  common.rs
util/: Cargo.toml
util/src/: lib.rs
www/: README.md  package-lock.json  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs
www/src/: app.html
www/src/lib/: websocket.js
www/src/lib/components/: Button.svelte  CoverArt.svelte  List.svelte  ListAlbum.svelte  ListItem.svelte  MyPlaylists.svelte  Navigation.svelte  NowPlaying.svelte  PlaylistTrack.svelte  PlaylistTracks.svelte  Search.svelte  TrackList.svelte  TrackMetadata.svelte
www/src/routes/: +page.svelte
