[package]
name = "hifi-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
log = "0.4"
pretty_env_logger = "0.4"
regex = "1.5"
base64 = "0.13"
serde_json = "1.0"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
rocksdb = "0.18"
md5 = "0.7.0"
clap = { version = "3.2", features = ["derive"] }
