[package]
edition = "2021"
name = "hifi-rs"
version = "0.1.0"

[dependencies]
base64 = "0.13"
bincode = "1.3"
byteorder = "1.4"
chrono = "0.4"
clap = { version = "3.2", features = ["derive"] }
comfy-table = "6.0"
ctrlc = { version = "3.0", features = ["termination"] }
dialoguer = { version = "0.10.1", features = ["fuzzy-select"] }
dirs = "4.0"
flume = "0.10"
futures = "0.3"
gstreamer = { version = "0.18", features = ["ser_de"] }
gstreamer-player = "0.18"
log = "0.4"
md5 = "0.7.0"
parking_lot = { version = "0.12", features = ["serde", "arc_lock"] }
pretty_env_logger = "0.4"
regex = "1.5"
reqwest = { version = "0.11", features = ["json", "blocking", "cookies", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = { version = "0.34", features = ["compression"] }
snafu = "0.7"
termion = "1.5"
textwrap = "0.15"
tokio = { version = "1.0", features = ["full"]} 
tokio-stream = "0.1"
tui = { version = "0.18", default-features = false, features = ["termion"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }

[dev-dependencies]
tokio-test = "0.4"
nanoid = "0.4.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = 'abort'
debug = 1
