[package]
edition = "2021"
name = "hifi-rs"
version = "0.2.5"
license-file = "../LICENSE"
repository = "https://github.com/iamdb/hifi.rs"

[dependencies]
async-broadcast = "0.5"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
ctrlc = { version = "3.0", features = ["termination"] }
cursive = { version = "0.20", default-features = false, features = ["termion-backend", "markdown", "toml"] } 
dialoguer = { version = "0.10.1", features = ["fuzzy-select"] }
dirs = "5"
enum-as-inner = "0.6"
flume = "0.10"
futures = "0.3"
gstreamer = { version = "0.20", features = ["serde", "v1_22"] }
md5 = "0.7.0"
hifirs-qobuz-api = { version = "0.1.0", path = "../qobuz-api" }
rand = "0.8"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.7"
sqlx = { version = "0.6", default-features = false, features = [ "runtime-tokio-rustls", "sqlite", "migrate", "macros", "all-types", "offline" ] }
textwrap = "0.16"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tracy = { version = "0.10", features = ["broadcast", "only-localhost"] } 
url = "2.2"
zbus = { version = "3", default-features = false, features = ["tokio"] }

[build-dependencies]
pkg-config = "0.3"
