[package]
edition = "2021"
name = "hifi-rs"
version = "0.3.3"
license-file = "../LICENSE"
repository = "https://github.com/iamdb/hifi.rs"

[dependencies]
async-broadcast = "0.5"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7.0"
ctrlc = "3.0"
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend"] } 
dialoguer = { version = "0.10", features = ["fuzzy-select"] }
dirs = "5"
enum-as-inner = "0.6"
flume = "0.11"
futures = "0.3"
gstreamer = { version = "0.21", features = ["serde", "v1_20"] }
md5 = "0.7.0"
hifirs-qobuz-api = { version = "*", path = "../qobuz-api" }
rand = "0.8"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.7"
sqlx = { version = "0.7", default-features = false, features = [ "runtime-tokio-rustls", "sqlite", "migrate", "macros" ] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tracy = { version = "0.10", default-features = false, features = ["broadcast", "only-localhost"] } 
url = "2.2"
zbus = { version = "3", default-features = false, features = ["tokio"] }
once_cell = "1.18"
axum = { version = "0.6", features = ["ws", "tokio"] } 
include_dir = "0.7"
mime_guess = "2.0"
cached = { version = "0.44", features = ["serde", "serde_json"]} 
async-trait = "0.1.73"

[build-dependencies]
pkg-config = "0.3"
