[package]
name = "playlist-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
qobuz-client = { version = "0.1.0", path = "../qobuz-client" }
rspotify = { version = "0.11", features = ["cli"] } 
tokio = { version = "1.21", features = ["full"]}
snafu = "0.7"
warp = "0.3"
pretty_env_logger = "0.4"
log = "0.4"
webbrowser = "0.8"
flume = "0.10"
spinoff = "0.5"
