[package]
name = "playlist-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
flume = "0.10"
futures = "0.3"
indicatif = "0.17"
log = "0.4"
pretty_env_logger = "0.4"
qobuz-client = { version = "0.1.0", path = "../qobuz-client" }
rspotify = { version = "0.11" } 
snafu = "0.7"
tokio = { version = "1.25", features = ["full"] }
warp = "0.3"
webbrowser = "0.8"
console = "0.15"
