[package]
name = "hifirs-qobuz-api"
version = "0.1.1"
edition = "2021"
license-file = "../LICENSE"
repository = "https://github.com/iamdb/hifi.rs"
description = "An incomplete, async API client for the Qobuz music service."

exclude = [
  "*.snap"
]

[dependencies]
base64 = "0.21"
bincode = "1.3"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
gstreamer = { version = "0.20", features = ["serde"] }
log = "0.4"
md5 = "0.7.0"
pretty_env_logger = "0.5"
regex = "1.5"
reqwest = { version = "0.11", features = ["rustls-tls-native-roots", "serde_json", "blocking", "cookies", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2"

[dev-dependencies]
tokio-test = "0.4"
insta = { version = "1.21", features = [ "yaml", "redactions" ] }
