[package]
name = "qobuz-client"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13"
bincode = "1.3"
byteorder = "1.4"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
enum-as-inner = "0.5"
flume = "0.10"
futures = "0.3"
gstreamer = { version = "0.18", features = ["ser_de"] }
log = "0.4"
md5 = "0.7.0"
pretty_env_logger = "0.4"
regex = "1.5"
reqwest = { version = "0.11", features = ["serde_json", "blocking", "cookies", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.7"
tokio = { version = "1.0", features = ["full"]}
tokio-test = "0.4"
url = "2.2"
util = { path = "../util" }
zerocopy = "0.6"

[dev-dependencies]
tokio-test = "0.4"
nanoid = "0.4.0"
insta = { version = "1.21", features = [ "yaml", "redactions" ] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
